add favicon and publish

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,6 +2,8 @@ project:
   type: website
 
 website:
+  favicon: creat_cafe.png
+
   title: "NE Utrecht"
   navbar:
     logo: images/creat_cafe.png
